Fixed alignment of icons in step 2

--- a/App/PluginWeb/EzBob.Web/Content/css/app.css
+++ b/App/PluginWeb/EzBob.Web/Content/css/app.css
@@ -233,7 +233,7 @@ ul.documents {
     background-color: #333;
 }
 
-.source_help {
+.add_account_button_alignment {
     margin: auto;
     float: left;
     margin-top: 7px;
